fix: resolve-image-distortion

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,20 +42,20 @@
     --primary-140: 153, 22, 0;
     --primary-150: 128, 0, 0;
 
-    --pink-10: 252,236,241;
-    --pink-20: 249,217,227;
-    --pink-30: 247,198,213;
-    --pink-40: 244,179,199;
-    --pink-50: 241,160,184;
-    --pink-60: 238,142,170;
-    --pink-70: 235,123,156;
-    --pink-80: 233,104,142;
-    --pink-90: 230,85,128;
-    --pink-100: 227,66,114;
-    --pink-110: 201,40,88;
-    --pink-120: 176,15,63;
-    --pink-130: 112,0,12;
-    --pink-140: 74,0,0;
+    --pink-10: 252, 236, 241;
+    --pink-20: 249, 217, 227;
+    --pink-30: 247, 198, 213;
+    --pink-40: 244, 179, 199;
+    --pink-50: 241, 160, 184;
+    --pink-60: 238, 142, 170;
+    --pink-70: 235, 123, 156;
+    --pink-80: 233, 104, 142;
+    --pink-90: 230, 85, 128;
+    --pink-100: 227, 66, 114;
+    --pink-110: 201, 40, 88;
+    --pink-120: 176, 15, 63;
+    --pink-130: 112, 0, 12;
+    --pink-140: 74, 0, 0;
 
     --purple-10: 244, 229, 255;
     --purple-20: 233, 204, 255;
@@ -564,4 +564,43 @@ body {
   font-size: 48px;
   line-height: 48px;
   text-transform: capitalize;
+}
+
+.contact-us__container {
+  display: flex;
+  max-width: 1310px;
+  margin: 0 auto;
+  width: 100%;
+  gap: 80px;
+}
+.contact,
+.map {
+  flex-shrink: 0;
+}
+.contact {
+  width: 100%;
+}
+
+@media (max-width: 1734px) and (min-width: 1024px) {
+  .contact-us__container {
+    width: 100%;
+  }
+
+  .contact {
+    width: calc(50% - 40px);
+  }
+
+  .map {
+    width: calc(50% - 40px);
+  }
+}
+
+@media (min-width: 1734px) {
+  .contact {
+    width: 557px;
+  }
+
+  .map {
+    width: 649px;
+  }
 }
